--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A handful of jade files that can easily be converted into HTML and uploaded to OrgSync",
   "scripts": {
     "clean": "rm -rf ./dist",
-    "build": "yarn build:sass && yarn build:jade",
+    "build": "yarn build:sass && yarn build:jade && yarn build:assets",
     "build:sass": "node-sass src/styles/main.sass -o dist/styles --output-style compressed",
-    "build:jade": "jade src/views/index.jade -o dist -P"
+    "build:jade": "jade src/views/index.jade -o dist -P",
+    "build:assets": "cp -a src/assets/. dist/assets"
   },
   "author": "Peter Abbondanzo",
   "license": "MIT",
