--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "yarn build:sass && yarn build:jade && yarn build:assets",
     "build:sass": "node-sass src/styles/main.sass -o dist/styles --output-style compressed",
     "build:jade": "jade src/views/index.jade -o dist -P",
-    "build:assets": "cp -a src/assets/. dist/assets"
+    "build:assets": "rm -rf dist/assets && cp -a src/assets/. dist/assets"
   },
   "author": "Peter Abbondanzo",
   "license": "MIT",
